ADD - hidden image

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 	</head>
 	<body>
 		<script type="module" src="/main.js"></script>
+		<img
+			src="/snake2d-featured-image.png"
+			style="opacity: 0; pointer-events: none; position: fixed"
+			alt=""
+		/>
 	</body>
 </html>
