ADD - og:schema

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/png" href="/snake3d.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Snake 3D</title>
+		<meta name="description" content="A simple 3D snake game!" />
 		<meta property="og:image" content="/snake2d-featured-image.png" />
-		<title>Snake 2D</title>
+		<meta property="og:title" content="Snake 3D" />
+		<meta property="og:url" content="https://snake-2d.vercel.app/" />
+		<meta property="og:description" content="A simple 3D snake game!" />
 	</head>
 	<body>
 		<script type="module" src="/main.js"></script>
